catálogo con fetch

--- a/src/components/ItemListContainer/ItemListContainer.css
+++ b/src/components/ItemListContainer/ItemListContainer.css
@@ -6,3 +6,10 @@ background-color: grey;
    text-align: center;
    color: white;
 }
+
+.ItemContainer {
+	display: flex;
+   	margin-top: 20px;
+	justify-content: center;
+	background: rgb(2,0,36);
+}
