--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -1,3 +1,11 @@
 .Header {
    display: flex;
 }
+.ItemList {
+   background-color: grey;
+      font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+      padding: 10%;
+      font-size: 50px;
+      text-align: center;
+      color: white;
+   }
