--- a/src/components/ItemListContainer/ItemListContainer.css
+++ b/src/components/ItemListContainer/ItemListContainer.css
@@ -26,9 +26,18 @@ background-color: grey;
    padding-top: 60px;
  }
  .sectiontitle {
-   margin: 50px 0 50px 0;
+   margin: 50px 0 0 0;
    text-align: center;
-   font-size: 5em;
+   font-size: 4em;
    font-family: 'Great Vibes', cursive;
-
    }
+   .subtitle h1 {
+      color: #8F7541;
+      margin: 0 0 50px 0;
+      text-align: center;
+      text-transform: capitalize;
+      font-size: 1.2em;
+      font-family:  Verdana, sans-serif;
+
+   
+      }
